[package]
name = "pandox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.10", features = ["derive"] }
color-eyre = "0.6.0"
crossbeam-channel = "0.5.2"
futures-util = "0.3.19"
notify = "5.0.0-pre.13"
open = "2.0.2"
pandoc = { path="rust-pandoc" }
reqwest = "0.11.9"
tempdir = "0.3.7"
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
url = "2.2.2"
warp = "0.3.2"
